<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="135dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top|center_vertical"
            android:gravity="center"
            android:orientation="vertical"

            >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/status" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_marginVertical="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/currentmode1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/current" />

                <TextView
                    android:id="@+id/currentmode2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/current" />

 "


            </LinearLayout>
            <TextView
                android:id="@+id/cmv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                tools:text="loading" />

            <TextView
                android:id="@+id/cpu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/cpu" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_marginVertical="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cpuv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:gravity="center|center_vertical|center_horizontal"
                    android:text="@string/loading" />

                <TextView
                    android:id="@+id/cpuv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:layout_marginEnd="15dp"
                    android:text="@string/loading" />
                <TextView
                    android:id="@+id/cpuv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:gravity="center|center_vertical|center_horizontal"
                    android:text="@string/loading" />

                <TextView
                    android:id="@+id/cpuv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:layout_marginEnd="15dp"
                    android:text="@string/loading" />
                <TextView
                    android:id="@+id/cpuv5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:gravity="center|center_vertical|center_horizontal"
                    android:text="@string/loading" />

                <TextView
                    android:id="@+id/cpuv6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:layout_marginEnd="15dp"
                    android:text="@string/loading" />





            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_marginVertical="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cpuv7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:gravity="center|center_vertical|center_horizontal"
                    android:text="@string/loading" />

                <TextView
                    android:id="@+id/cpuv8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:layout_marginEnd="15dp"
                    android:text="@string/loading" />





            </LinearLayout>

            <Button
                android:id="@+id/refre"
                android:layout_width="79dp"
                android:layout_height="35dp"
                android:layout_marginVertical="10dp"
                android:text="@string/refresh" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Set mode" />


            <Button
                android:id="@+id/bm1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_mode" />

            <Button
                android:id="@+id/bm2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_mode" />

            <Button
                android:id="@+id/bm3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sd_tweak" />

            <Button
                android:id="@+id/bm4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/powersaver" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/advance" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:srcCompat="@drawable/ic_launcher_background" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>